Fixed the css bug of overflow

--- a/src/Templates/Euphony/Euphony.scss
+++ b/src/Templates/Euphony/Euphony.scss
@@ -84,7 +84,8 @@
                 font-size: 1.5rem;
                 padding-left: 3rem;
                 padding-right: 3rem;
-                overflow: hidden;
+                word-break: break-all;
+                padding-top: 1vh;
             }
         }
 
