--- a/src/Templates/Satiny/Satiny.scss
+++ b/src/Templates/Satiny/Satiny.scss
@@ -54,7 +54,8 @@
             font-size: 1.2rem;
             padding-left: 3rem;
             padding-bottom: 1rem;
-            padding-right: 1rem;
+            padding-right: 2rem;
+            word-break: break-all;
         }
     }
 
